syntax = "proto3";

package wallet;

option java_multiple_files = true;
option java_package = "io.clertonraf.grpc";
option java_outer_classname = "WalletProto";

// The Account service definition.
service Wallet {
  // Sends a deposit
  rpc Deposit (WalletRequest) returns (WalletResponse) {}

  // Makes a Withdraw
  rpc Withdraw (WalletRequest) returns (WalletResponse) {}

  // Gets the balance
  rpc Balance (BalanceRequest) returns (BalanceResponse) {}
}

// The request message containing the user's name, the amount and currency.
message WalletRequest {
  string user = 1;
  double amount = 2;
  string currency = 3;
}

// The response message containing the response
message WalletResponse {
  string message = 1;
}

message BalanceRequest {
  string user = 1;
}

message BalanceResponse {
  double balanceEUR = 1;
  double balanceGBP = 2;
  double balanceUSD = 3;
}